# garbanzo-ai

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  justfile  pubspec.yaml
.claude/skills/e2e-testing/: SKILL.md
.claude/skills/project-overview/: SKILL.md
.cursor/: _mcp.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  chat.py  health.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: conversation.py  message.py  user.py
backend/app/schemas/: auth.py  chat.py  user.py
backend/app/services/: __init__.py  chat_service.py  conversation_service.py  llm_provider.py  ollama_provider.py  user_service.py
docs/: WEBGL_WSL.md
integration_test/: app_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: api_client.dart  auth_service.dart
lib/core/widgets/: auth_form_layout.dart
lib/features/chat/models/: chat_message.dart  conversation.dart  model_info.dart
lib/pages/: home_page.dart  login_page.dart  register_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: chrome-webgl
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+12 files in other folders)
